blog.css
@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,200;0,400;0,600;1,400;1,600&display=swap');
:root {
  --text:#2a2a2a;
  --text-med:#bbb;
  --text-faint:#ffdc68;
  --text-faint-alpha:#ffdc68a8;
  --text-ultra-faint:#d7d7d7;
  --highlight:#fffdcc;
  --header-bg:#fffde9;
  --bg:#fff;
  --bg-faint:#f3f3f3;
  --selection:#f7cb4577;

  --gold:#ffd024;

  --outgoing-msg:#3986f7;
  --outgoing-text:#ffffff;
  --incoming-msg:#e9e9eb;
  --incoming-text:#242424;
  --gradient-shadow:#d6d6d6;
}
::-moz-selection {background-color:var(--selection);}
::selection {background-color:var(--selection);}
.hidden {display:none!important;}

html {width:100vw;overflow-x:hidden;}
body {background-color:var(--bg);color:var(--text);font-family:'Bitter', serif;font-variant-ligatures:common-ligatures;font-weight:300;font-size:18px;line-height:2rem;margin:0 auto;max-width:100vw;text-rendering:optimizeLegibility;overflow-x:auto;padding:0;}
nav, footer {padding:15px 0;}
nav a img {display:inline-block;max-width:34px;margin-right:6px;vertical-align:bottom;}

.row {position:relative;}
h1, h2, h3, h5 {font-variant-ligatures:discretionary-ligatures;font-weight:normal;line-height:1.1em;margin-top:0;}
h1 {font-weight:lighter;color:var(--gold);}
h2 {font-size:1.3em;}
h3 {font-size:1.3em;}
h5 {font-size:1.2em;font-weight:600;}

strong {font-weight:600;}
a {color:var(--text);cursor:pointer!important;display:inline-block;border-bottom:1px solid var(--gold);line-height:1em;text-decoration:none;}
a:hover {background-color:var(--selection);text-decoration:none;}
nav a, footer a, figure > a, figure > a:hover {border:none!important;background-color:unset!important;}
nav a:hover, footer a:hover {color:var(--gold);background-color:unset!important;}
a.btn {border:none;border-radius:6px;font-weight:bold;display:inline-block;margin-top:10px;padding:8px 14px;}
b {font-weight:700;}
b.big {font-size:1.6em;font-weight:600;color:var(--text-med);}

ul.checklist {list-style-type:none;padding-left:0;}

emoji {font-family:'apple color emoji','segoe ui emoji','noto color emoji','android emoji',emojisymbols,'emojione mozilla','twemoji mozilla','segoe ui symbol';font-weight:400;font-style:normal!important;}
img {max-width:100%;}
hr {border-color:var(--text-ultra-faint);clear:both;margin:50px auto;width:40%;}

/* BLOG CONTENT */
blockquote.slug p {background-color:#fdf0c8;color:#2a2a2a;}
blockquote.slug p::before {background-color:#fdf0c8;}
article {padding:30px 15px 50px;position:relative;}
figure {position:relative;text-align:center;}
figure a {border:none;box-shadow:0 3px 8px rgb(0 0 0 / 20%);border-radius:6px;transition:transform 200ms, box-shadow 200ms;transition-timing-function:ease-out;}
figure a picture, figure a img {display:inline-block;border-radius:6px;}
@media (hover: hover) {
  figure a {position:relative;}
  figure a::before, figure a::after {display:flex;justify-content:center;align-content:middle;position:absolute;z-index:-1}
  figure a:hover {box-shadow:0 13px 20px -8px rgb(0 0 0 / 15%);transform:scale(1.02);}
  figure a:hover::before {content:'';background-color:var(--gold);border-radius:6px;opacity:.3;top:0;right:0;bottom:0;left:0;z-index:1;}
  figure a:hover::after {content:'open \f14c';color:#333;font-family:'Font Awesome 5 Pro', sans-serif;font-weight:100;font-size:1.4em;right:15px;bottom:15px;z-index:2;}
}
figure.half-width img, figure.float-left img {display:block;margin:10px auto;max-width:100%;}
.full-width figcaption {color:var(--incoming-text);font-size:1.25em;margin-top:0;}
.dropcap {color:var(--gold);float:left;font-size:62px;font-weight:lighter;line-height:0.8em;margin-top:9px;padding-right:0.6rem;}
figure.full-width img {border-radius:5px;}

.hover-expose {background-size:contain;}
.hover-expose img {transition:opacity .5s;}
.hover-expose:hover img {opacity:0;}

.text-left {text-align:left!important;}

@media (min-width:820px) {
  h1 {font-size:62px;}
  article {max-width:768px;margin:0 auto;}
  figure.half-width img {margin:0 auto;}
}

/* OVERFLOW CONTAINER */
.overflow {text-align:center;}
@media (min-width:820px) {
  .overflow {cursor:ew-resize;width:100vw;margin-left:calc(-50vw + 369px);overflow-x:auto;position:relative;}
  .overflow:hover::after {opacity:0;letter-spacing:18vw;}
  .overflow::after {content:'SCROLL';color:var(--text-faint);display:block;font-size:280px;font-weight:bold;letter-spacing:6vw;line-height:1.55em;max-width:1600px;opacity:.4;overflow:hidden;text-align:left;position:absolute;top:0;left:0;width:1600px;z-index:-1;transition:all .4s ease-in;}
  .overflow .row {width:1600px;margin:0 auto;}
  .overflow .col-lg-6 {-ms-flex: 0 0 50%;flex: 0 0 50%;max-width: 50%;}
}
@media (min-width:1600px) {
  .overflow {cursor:default;}
  .overflow::after {content:unset;}
}

/* SMS */
blockquote p:first-child {margin-bottom:5px;}
blockquote p:first-child::before, blockquote p:first-child::after {content:unset;}
figure.sms {cursor:pointer;user-select:none;text-align:left;}
.sms p {background-color:var(--incoming-msg);border-radius:20px;color:var(--incoming-text);line-height:1.2em;margin:.4rem 0;padding:10px 14px;width:fit-content;position:relative;}
figure.sms p {box-shadow:0 0px 25px #2a2a2a61;clear:right;font-size:16px;max-width:80%;transition:top .6s ease-out;top:0px;}
figure.sms p::after {background-image:radial-gradient(ellipse at bottom left, var(--bg), var(--gradient-shadow));}
.sms p::before, .sms p::after {background-color:var(--incoming-msg);border-bottom-right-radius:100%;content:'';display:block;width:16px;height:12px;position:absolute;top:95%;left:8px;}
.sms p::after {background-color:var(--bg);width:4px;}
.sms p.outgoing {background-color:var(--outgoing-msg);color:var(--outgoing-text);float:right;}
.sms p.outgoing::before, .sms p.outgoing::after {background-color:var(--outgoing-msg);left:unset;right:8px;transform:scaleX(-1);}
.sms p.outgoing::after {width:4px;right:7px;background-color:var(--bg);}
figcaption {max-width:500px;margin:10px auto 25px;}
figcaption::after {content:'';display:block;clear:both;}

@media (min-width:820px) {
  figure {margin:3rem 0 2rem;}
  figure img {pointer-events:none;}
  .sms figcaption {position:absolute;top:43%;left:30px;right:30px;}
  figure.sms p {transform:scale(1.1);margin-top:1em;max-width:400px;}

  @media (hover: hover) {
    figure.sms::after {color:var(--text-med);content:'(click to show image)';display:block;text-align:center;margin-top:.4em;}
    figure:active.sms p {opacity:0;top:-15px;transition:top .15s ease-out, opacity .12s ease-in;transition-delay:0s, .05s;}
    figure:active.sms p:nth-child(2) {transition-delay:.08s, .13s;}
    figure:active.sms p:nth-child(3) {transition-delay:.16s, .21s;}
  }

  figcaption {max-width:unset;}
  figure.half-width {float:right;margin:0 -20px 12px 25px;max-width:280px;}
  figure.float-left {float:left;margin:0 45px 12px -40px;max-width:460px;}
  figure.full-width {margin:1em 0 2em;}
  .full-width figcaption {font-size:1.2em;margin-top:0;max-width:600px;}
}

@media (min-width:992px) {
  figure.two-img {margin-right:-5vw;margin-left:-5vw;}
  figure.stretch {margin-right:-12vw;margin-left:-12vw;}
}
@media (min-width:1200px) {
  figure.two-img {margin-right:-6vw;margin-left:-6vw;}
  figure.stretch {margin-right:-18vw;margin-left:-18vw;}
}

/* FOOTER */
footer {cursor:default;}
footer .icons * {display:inline-block;margin:0 2px;vertical-align:middle;}
footer a, footer a i {cursor:pointer;}
@media (prefers-color-scheme:dark){#footer a.icon {color:#777;}}
.linkedin:hover {color:#3177B0;}
.mailbox:hover {color:#db0029;}
.sms:hover {color:#54B852;}

/* DARK MODE */
@media (prefers-color-scheme:dark) {
:root {
  --text:#fff;
  --text-med:#bbb;
  --text-faint:#8f8e83;
  --text-faint-alpha:#8f8e838f;
  --text-ultra-faint:#444;
  --highlight:#5e5a00;
  --header-bg:#1d1d1d;
  --bg:#000;
  --bg-faint:#181818;
  --selection:#fffcdb42;

  --gold:#ffd700;

  --outgoing-msg:#3986f7;
  --outgoing-text:#ffffff;
  --incoming-msg:#3b3b3d;
  --incoming-text:#e1e1e1;
  --gradient-shadow:#090909;
}
  a {color:var(--gold);}
  a:hover {color:var(--text);background-color:unset!important;text-decoration:none;}
  b {font-size:1.15em;line-height:1em;}
  img.invert {filter:invert(1) hue-rotate(180deg);}
  .work a {box-shadow:none;}

  footer .icons a {color:var(--text);}
}

.toggle {border:1px solid var(--gold);border-radius:8px;display:inline-block;margin-left:.75em;}
.toggle a {border-bottom:none;border-right:1px solid var(--gold);font-size:initial;padding:6px 8px;}
.toggle a:hover {background-color:var(--selection)!important;}
.toggle a:first-child {border-radius:7px 0 0 7px;}
.toggle a:last-child {border:none;border-radius:0 7px 7px 0;}
.toggle a.active, .toggle a.active:hover {background-color:var(--gold)!important;color:#000!important;}

